tests/paczka1/fuzzy1/45028041.err
Error in line 8: A729 A536 177,0
Error in line 9: K622QWM1 A729 23,8
Error in line 14: LeWqFF8WEA26E89,9
Error in line 2: c25ohD8I A748 13,2
Error in line 20: A729 A729 42,6
Error in line 16: LeWqFF8W A26 160,9
Error in line 28: YDuAPf A26 42,8
Error in line 35: A729 A729 -6,2
Error in line 26: K622QWM1 A536 2,6
Error in line 39: YDuAPf A748 86,4
